Finalmente o banco de dados deu certo! Ainda tem coisas para melhorar mas está tudo certo agora. Na main tem um exemplo de tudo